k8s/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: open-dns-port
  namespace: dev
spec:
  policyTypes:
    - Egress
    - Ingress
  podSelector:
    matchLabels:
      lang: go
      app: backend
  ingress:
    - from:
        namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: dev
      ports:
        - protocol: TCP
          port: 8080
  egress:
    - to:
        namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: kube-system
      ports:
        - protocol: TCP
          port: 53
        - protocol: UDP
          port: 53
